--- a/AmericanSingLanguage/app/src/main/res/layout/activity_main.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:weightSum="1">
+
+        <TextView
+            android:clickable="false"
+            android:layout_width="206dp"
+            android:layout_height="0dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="  SONGS"
+            android:id="@+id/textView"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1.24"
+            android:textSize="50sp"
+            android:font="sans"
+            android:fontFamily="Typeface.createFromAsset(context.getAssets(), "
+            android:fonts/basictitlefont.ttf"
+            />
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="210dp"
+            android:id="@+id/UploadAFileButton"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/UploadAFileButton"
+            android:background="@android:color/transparent"
+            android:clickable="true" />
+
+        <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="210dp"
+            android:id="@+id/ChooseFromListButton"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ChooseFromListButton"
+            android:background="@android:color/transparent"
+            android:clickable="true" />
+
+
+
+
+    </LinearLayout>
 
 </RelativeLayout>
