--- a/AmericanSingLanguage/app/src/main/res/layout/homepage.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/homepage.xml
@@ -1,5 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/turquoisebackground">
 
-</LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="225dp"
+            android:id="@+id/imageButton"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:color/transparent"
+            android:src="@drawable/SignLanguageLogoLarge" />
+
+        <TextView
+            android:layout_width="365dp"
+            android:layout_height="40dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text= "A unique music experience"
+            android:textAlignment="center"
+            android:id="@+id/textView2"
+            android:layout_gravity="center_horizontal"
+            android:background="#ff7accc8"
+            android:textSize="29dp" />
+
+        <TextView
+            android:layout_width="365dp"
+            android:layout_height="30dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Ever wonder what music looks like to a deaf person? Want to impress your friends by singing to them in a whole new way?"
+            android:id="@+id/textView3"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.73"
+            android:textSize="25dp"/>
+
+        <ImageButton
+            android:layout_width="157dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageButton2"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:color/transparent"
+            android:src="@drawable/NextButton"
+            android:scaleType="fitCenter"
+            android:layout_weight="0.6"
+            android:contentDescription="nextbutton"
+            android:clickable="true"
+            android:onClick="onButtonClicked"/>
+
+    </LinearLayout>
+</RelativeLayout>
