--- a/AmericanSingLanguage/app/src/main/res/layout/choose_from_list.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/choose_from_list.xml
@@ -12,7 +12,8 @@
             android:layout_width="fill_parent"
             android:layout_height="75dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=" Choose From List"
+            android:text="Choose From List"
+            android:gravity="center"
             android:textColor="#ff7accc8"
             android:id="@+id/textView4"
             android:layout_row="0"
