--- a/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
@@ -8,7 +8,27 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Tutorial"
-        android:id="@+id/textView"
+        android:id="@+id/TutorialTitle"
         android:layout_gravity="center_horizontal" />
 
-</LinearLayout>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center" >
+
+        <VideoView
+        android:id="@+id/video_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
+    </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="{$word}"
+        android:id="@+id/textView" />
+
+ </LinearLayout>
