--- a/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
@@ -7,9 +7,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tutorial"
+        android:text="Twinkle"
         android:id="@+id/TutorialTitle"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="20dp"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
@@ -18,17 +20,10 @@
 
         <VideoView
         android:id="@+id/video_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
     </FrameLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="{$word}"
-        android:id="@+id/textView" />
 
  </LinearLayout>
