--- a/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
@@ -7,11 +7,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Twinkle"
         android:id="@+id/TutorialTitle"
         android:layout_gravity="center_horizontal"
         android:layout_margin="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginTop="0dp"/>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
