--- a/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
+++ b/AmericanSingLanguage/app/src/main/res/layout/asl_tutorial_page.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/LayoutLinear">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TutorialTitle"
+        android:text="Video"
         android:layout_gravity="center_horizontal"
         android:layout_margin="20dp"
         android:layout_marginTop="0dp"/>
@@ -21,7 +23,15 @@
         android:id="@+id/video_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+            android:visibility="visible" />
+
+        <VideoView
+            android:id="@+id/video_view1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
 
     </FrameLayout>
 
